# Oz_django_plus

./: .coverage  .env  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
tabom/: models.py
tabom/apis/v1/: like_router.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_like_service.py
